# burn-models

./: .envrc  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  cubecl.toml  flake.nix  package.json
.cargo/: config.toml
.github/workflows/: docs.yml
.moss/: duplicate-functions-allow  duplicate-types-allow
crates/burn-image/: Cargo.toml
crates/burn-image-cli/: Cargo.toml
crates/burn-image-cli/src/: main.rs
crates/burn-image-clip/: Cargo.toml
crates/burn-image-clip/src/: attention.rs  clip.rs  lib.rs  open_clip.rs  tokenizer.rs
crates/burn-image-convert/: Cargo.toml
crates/burn-image-convert/src/: controlnet_loader.rs  embedding_loader.rs  lib.rs  lora_loader.rs  mapping.rs  safetensors.rs  serialize.rs
crates/burn-image-core/: Cargo.toml
crates/burn-image-core/src/: groupnorm.rs  layernorm.rs  lib.rs  lora.rs  precision.rs  textual_inversion.rs
crates/burn-image-samplers/: Cargo.toml
crates/burn-image-samplers/src/: ddim.rs  ddpm.rs  deis.rs  dpm.rs  dpm2.rs  dpm3m.rs  dpm_2m_variants.rs  dpm_2s.rs  dpm_fast.rs  euler.rs  euler_cfg.rs  guidance.rs  heun.rs  ipndm.rs  lcm.rs  lib.rs  lms.rs  res_multistep.rs  sa_solver.rs  scheduler.rs  unipc.rs
crates/burn-image-unet/: Cargo.toml
crates/burn-image-unet/src/: blocks.rs  conditioning.rs  controlnet.rs  ip_adapter.rs  lib.rs  t2i_adapter.rs  unet_sd.rs  unet_sdxl.rs
crates/burn-image-vae/: Cargo.toml
crates/burn-image-vae/src/: decoder.rs  encoder.rs  lib.rs
crates/burn-image/src/: backends.rs  batch.rs  lib.rs  memory.rs  offload.rs  pipeline.rs
crates/burn-models/: Cargo.toml
crates/burn-models-cli/: Cargo.toml
crates/burn-models-cli/src/: llm.rs  main.rs
crates/burn-models-clip/: Cargo.toml
crates/burn-models-clip/src/: attention.rs  clip.rs  embedder.rs  lib.rs  open_clip.rs  tokenizer.rs
crates/burn-models-convert/: Cargo.toml
crates/burn-models-convert/src/: controlnet_loader.rs  embedding_loader.rs  lib.rs  loader.rs  lora_loader.rs  sd_loader.rs  serialize.rs
crates/burn-models-core/: Cargo.toml
crates/burn-models-core/src/: attention.rs  continuous_batching.rs  dit.rs  flash_attention.rs  frame_interpolation.rs  glu.rs  groupnorm.rs  kv_cache.rs  layernorm.rs  lib.rs  moe.rs  paged_attention.rs  precision.rs  quantization.rs  rmsnorm.rs  rope.rs  silu.rs  speculative.rs  temporal_attention.rs  textual_inversion.rs  transformer.rs  vae3d.rs
crates/burn-models-cubecl/: Cargo.toml
crates/burn-models-cubecl/benches/: conv3d.rs  unet_blocks.rs
crates/burn-models-cubecl/src/: attention.rs  conv3d.rs  conv3d_optimized.rs  groupnorm_silu.rs  lib.rs  pool3d.rs  utils.rs
crates/burn-models-cubecl/tests/: correctness.rs  correctness_cpu.rs  correctness_cuda.rs  f16_attention_bug.rs
crates/burn-models-dit/: Cargo.toml
crates/burn-models-dit/src/: auraflow.rs  cogvideox.rs  flux.rs  flux_loader.rs  hunyuan.rs  lib.rs  ltx.rs  mochi.rs  pixart.rs  qwenimage.rs  sana.rs  sd3.rs  wan.rs  zimage.rs
crates/burn-models-llm/: Cargo.toml
crates/burn-models-llm/src/: chat.rs  deepseek.rs  deepseek_loader.rs  gemma.rs  gemma_loader.rs  inference.rs  jamba.rs  jamba_loader.rs  lib.rs  llama.rs  llama_loader.rs  mamba.rs  mamba_loader.rs  mistral.rs  mistral_loader.rs  mixtral.rs  mixtral_loader.rs  phi.rs  phi_loader.rs  qwen.rs  qwen_loader.rs  rwkv.rs  rwkv_loader.rs  serve.rs
crates/burn-models-samplers/: Cargo.toml
crates/burn-models-samplers/src/: ddim.rs  ddpm.rs  deis.rs  dpm.rs  dpm2.rs  dpm3m.rs  dpm_2m_variants.rs  dpm_2s.rs  dpm_fast.rs  euler.rs  euler_cfg.rs  guidance.rs  heun.rs  ipndm.rs  lcm.rs  lib.rs  lms.rs  res_multistep.rs  sa_solver.rs  scheduler.rs  unipc.rs
crates/burn-models-samplers/tests/: sampler_fixtures.rs
crates/burn-models-samplers/tests/fixtures/: dpm_2m_reference.json  dpm_sde_reference.json  euler_ancestral_reference.json  sigma_schedules.json
crates/burn-models-unet/: Cargo.toml
crates/burn-models-unet/src/: blocks.rs  controlnet.rs  cubecl.rs  ip_adapter.rs  lib.rs  stable_cascade.rs  t2i_adapter.rs  unet_sd.rs  unet_sdxl.rs
crates/burn-models-vae/: Cargo.toml
crates/burn-models-vae/src/: autoencoder.rs  decoder.rs  encoder.rs  lib.rs
crates/burn-models/src/: backends.rs  flash_attention.rs  lib.rs  memory.rs  offload.rs  pipeline.rs
crates/burn-models/src/pipeline/: mod.rs  sd1x.rs  sdxl.rs
docs/: alternative-architectures.md  architecture.md  cubecl-conv3d.md  cubecl-guide.md  future-architectures.md  getting-started.md  index.md  issues-log.md  package.json  pipelines.md  precision-implementation.md  precision-strategies.md  samplers.md
docs/.vitepress/: config.ts
scripts/: gen_sampler_fixtures.py  pre-commit
