[workspace]
resolver = "2"
members = [
    "crates/burn-models",
    "crates/burn-models-core",
    "crates/burn-models-clip",
    "crates/burn-models-vae",
    "crates/burn-models-unet",
    "crates/burn-models-samplers",
    "crates/burn-models-convert",
    "crates/burn-models-cli",
    "crates/burn-models-llm",
    "crates/burn-models-dit",
]

[workspace.dependencies]
# Internal crates
burn-models-core = { path = "crates/burn-models-core" }
burn-models-clip = { path = "crates/burn-models-clip" }
burn-models-vae = { path = "crates/burn-models-vae" }
burn-models-unet = { path = "crates/burn-models-unet" }
burn-models-samplers = { path = "crates/burn-models-samplers" }
burn-models-convert = { path = "crates/burn-models-convert" }
burn-models-llm = { path = "crates/burn-models-llm" }
burn-models-dit = { path = "crates/burn-models-dit" }

# External dependencies
burn = "0.16"
burn-ndarray = "0.16"
burn-tch = "0.16"
burn-wgpu = "0.16"
burn-cuda = "0.16"
bytemuck = "1.21"
half = "2.4"
memmap2 = "0.9"
regex = "1.11"
safetensors = "0.5"
thiserror = "2.0"
