[workspace]
resolver = "2"
members = [
    "crates/burn-models",
    "crates/burn-models-core",
    "crates/burn-models-clip",
    "crates/burn-models-vae",
    "crates/burn-models-unet",
    "crates/burn-models-samplers",
    "crates/burn-models-convert",
    "crates/burn-models-cli",
    "crates/burn-models-llm",
    "crates/burn-models-dit",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
burn-models-core = { path = "crates/burn-models-core" }
burn-models-clip = { path = "crates/burn-models-clip" }
burn-models-vae = { path = "crates/burn-models-vae" }
burn-models-unet = { path = "crates/burn-models-unet" }
burn-models-samplers = { path = "crates/burn-models-samplers" }
burn-models-convert = { path = "crates/burn-models-convert" }
burn-models-llm = { path = "crates/burn-models-llm" }
burn-models-dit = { path = "crates/burn-models-dit" }

# External dependencies
burn = "0.16.1"
burn-ndarray = "0.16.1"
burn-tch = "0.16.1"
burn-wgpu = "0.16.1"
burn-cuda = "0.16.1"
bytemuck = "1.24"
half = "2.7"
memmap2 = "0.9"
regex = "1.12"
safetensors = "0.7"
thiserror = "2.0"
