[package]
name = "burn-image-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for burn-image Stable Diffusion"
license = "MIT OR Apache-2.0"

[[bin]]
name = "burn-image"
path = "src/main.rs"

[features]
default = ["wgpu"]
ndarray = ["burn-image/ndarray"]
tch = ["burn-image/tch"]
wgpu = ["burn-image/wgpu"]
cuda = ["burn-image/cuda"]

[dependencies]
burn-image = { path = "../burn-image" }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
indicatif = "0.17"
