[package]
name = "burn-image"
version = "0.1.0"
edition = "2021"

[dependencies]
burn.workspace = true
burn-image-core.workspace = true
burn-image-clip.workspace = true
burn-image-vae.workspace = true
burn-image-unet.workspace = true
burn-image-samplers.workspace = true
burn-image-convert.workspace = true
