[package]
name = "burn-models-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Command-line interface for burn-models (Stable Diffusion, LLMs)"
license.workspace = true

[[bin]]
name = "burn-models"
path = "src/main.rs"

[[bin]]
name = "inspect-safetensors"
path = "src/bin/inspect-safetensors.rs"

[features]
default = ["wgpu", "cpu", "cubecl", "precision-all"]
# For NVIDIA GPUs, build with: cargo build --features cuda

# Backend features - use burn's own feature flags
cpu = ["burn/cpu"]
ndarray = ["burn/ndarray"]
tch = ["burn/tch"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

# CubeCL acceleration (flash attention for f16/bf16) - enabled by default
cubecl = ["burn-models/cubecl", "burn-models-unet/cubecl", "burn-cubecl", "dep:cubecl"]

# Precision support - compile only what you need
precision-f32 = []      # Enable f32 precision (slowest, most stable)
precision-f16 = []      # Enable f16 precision (fast, may NaN without upcast)
precision-bf16 = []     # Enable bf16 precision (fast, stable on Ampere+)
precision-all = ["precision-f32", "precision-f16", "precision-bf16"]

# Convenience presets (use with --no-default-features)
preset-fast = ["precision-bf16", "cubecl"]   # bf16 + flash attention only
preset-quality = ["precision-f32"]            # f32 only, no JIT overhead

# LLM features
llm-serve = ["burn-models-llm/serve", "tokio"]

[dependencies]
burn = { workspace = true }
burn-models = { path = "../burn-models" }
burn-models-llm = { path = "../burn-models-llm" }
burn-models-convert = { path = "../burn-models-convert" }
burn-models-clip = { path = "../burn-models-clip" }
burn-models-unet = { path = "../burn-models-unet" }
burn-models-vae = { path = "../burn-models-vae" }
burn-models-samplers = { path = "../burn-models-samplers" }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
indicatif = "0.17"
memmap2 = "0.9"
safetensors = "0.5"
half = "2"

# CubeCL dependencies (optional, for flash attention)
burn-cubecl = { workspace = true, optional = true }
cubecl = { version = "0.9.0-pre.6", optional = true, features = ["cuda", "wgpu"] }

# Serve dependencies (optional)
tokio = { version = "1", features = ["full"], optional = true }
