[package]
name = "burn-models-convert"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
burn.workspace = true
burn-models-core.workspace = true
bytemuck.workspace = true
half.workspace = true
memmap2.workspace = true
safetensors.workspace = true
thiserror.workspace = true
