[package]
name = "burn-models-convert"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
burn.workspace = true
burn-models-core.workspace = true
burn-models-clip = { path = "../burn-models-clip" }
burn-models-unet = { path = "../burn-models-unet" }
burn-models-vae = { path = "../burn-models-vae" }
bytemuck.workspace = true
half.workspace = true
memmap2.workspace = true
safetensors.workspace = true
thiserror.workspace = true
