[package]
name = "burn-models-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
cubecl = ["dep:burn-models-cubecl", "dep:burn-cubecl"]

[dependencies]
burn.workspace = true
burn-models-cubecl = { workspace = true, optional = true }
burn-cubecl = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray.workspace = true
