[package]
name = "burn-models-cubecl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CubeCL GPU kernels for burn-models"

[features]
default = []
# Backend selection (for tests and benchmarks)
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]

[dependencies]
burn-cubecl = "0.20.0-pre.6"
cubecl = { version = "=0.9.0-pre.6", default-features = false, features = ["stdlib"] }
burn = { workspace = true }

# Optional backends for testing (enabled via features)
burn-wgpu = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
burn-models-core = { workspace = true }
burn-ndarray = { workspace = true }

[[bench]]
name = "conv3d"
harness = false
