[package]
name = "burn-models-cubecl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CubeCL GPU kernels for burn-models"

[features]
default = ["cpu"]
# Backend selection
cpu = ["burn-cpu"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]

[dependencies]
burn-cubecl = "0.20.0-pre.6"
cubecl = { version = "=0.9.0-pre.6", default-features = false, features = ["stdlib"] }
cubek = { version = "=0.1.0-pre.1", features = ["attention"] }
burn = { workspace = true }

# Optional backends
burn-cpu = { version = "0.20.0-pre.6", optional = true, default-features = false }
burn-wgpu = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
burn-models-core = { workspace = true }
burn-ndarray = { workspace = true }

[[bench]]
name = "conv3d"
harness = false
