[package]
name = "burn-models-cubecl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CubeCL GPU kernels for burn-models"

[features]
default = ["cpu"]
# Backend selection - use burn's own feature flags
cpu = ["burn/cpu"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

[dependencies]
burn-cubecl = "0.20.0-pre.6"
cubecl = { version = "=0.9.0-pre.6", default-features = false, features = ["stdlib"] }
cubek = { version = "=0.1.0-pre.1", features = ["attention"] }
burn = { workspace = true }
half = { workspace = true }

[dev-dependencies]
criterion = "0.5"
burn-models-core = { workspace = true, features = ["cubecl"] }
burn-models-unet = { workspace = true, features = ["cubecl"] }
burn-ndarray = { workspace = true }
# Backend crates needed for tests (low-level types like CubeTensor)
# default-features = false to avoid Fusion wrapper (tests need raw CubeTensor)
burn-wgpu = { version = "0.20.0-pre.6", default-features = false }
burn-cuda = { version = "0.20.0-pre.6", default-features = false }
burn-cpu = { version = "0.20.0-pre.6", default-features = false }

[[bench]]
name = "conv3d"
harness = false

[[bench]]
name = "unet_blocks"
harness = false
