[package]
name = "burn-models-dit"
version = "0.1.0"
edition = "2021"
description = "DiT-based diffusion models (Flux, SD3, PixArt)"
license = "MIT OR Apache-2.0"

[dependencies]
burn.workspace = true
burn-models-core.workspace = true
burn-models-convert.workspace = true
thiserror.workspace = true

[dev-dependencies]
burn-ndarray.workspace = true
