[package]
name = "burn-models-dit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "DiT-based diffusion models (Flux, SD3, PixArt)"
license.workspace = true

[dependencies]
burn.workspace = true
burn-models-core.workspace = true
burn-models-convert.workspace = true
thiserror.workspace = true

[dev-dependencies]
burn-ndarray.workspace = true
