[package]
name = "burn-models-llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "LLM implementations for burn-models"
license.workspace = true

[dependencies]
burn-models-core = { path = "../burn-models-core" }
burn-models-convert = { path = "../burn-models-convert" }
burn = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
