[package]
name = "burn-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Model inference in pure Rust using the Burn deep learning framework"
license.workspace = true
keywords = ["ai", "machine-learning", "llm", "stable-diffusion", "image-generation"]
categories = ["science", "multimedia::images"]

[features]
default = []
# Backend features - enable at most one
ndarray = ["burn-ndarray"]
tch = ["burn-tch"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]
# CubeCL acceleration (flash attention for f16)
cubecl = ["burn-models-unet/cubecl", "burn-models-cubecl", "burn-cubecl"]

[dependencies]
burn.workspace = true
burn-models-core.workspace = true
burn-models-clip.workspace = true
burn-models-vae.workspace = true
burn-models-unet.workspace = true
burn-models-samplers.workspace = true
burn-models-convert.workspace = true
burn-models-llm.workspace = true

# Optional CubeCL dependencies
burn-models-cubecl = { workspace = true, optional = true }
burn-cubecl = { workspace = true, optional = true }

# Optional backend dependencies
burn-ndarray = { workspace = true, optional = true }
burn-tch = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true }
burn-cuda = { workspace = true, optional = true }
